Fix skeleton card styles on mobile

--- a/app/assets/stylesheets/jpstudy/words.scss
+++ b/app/assets/stylesheets/jpstudy/words.scss
@@ -410,6 +410,17 @@
       animation: pulse 2s cubic-bezier(0.4, 0, 0.6 ,1) infinite;
     }
   }
+  @media (max-width: 600px) {
+    .japanese,
+    .english-text,
+    .added-on {
+      width: fit-content;
+      margin-bottom: 4px;
+    }
+    .translation {
+      padding-bottom: 0px;
+    }
+  }
   @keyframes pulse {
     50% {opacity: .5 }
   }
